--- a/dep-elk-cluster.yaml
+++ b/dep-elk-cluster.yaml
@@ -1,4 +1,3 @@
-#deploymet    
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
@@ -10,6 +9,9 @@ spec:
     count: 1
     podTemplate:
       spec:
+        volumes:
+          - name: elasticsearch-data
+            emptyDir: {}
         containers:
         - name: elasticsearch
           env:
@@ -27,15 +29,15 @@ spec:
       node.data: true
       node.ingest: true
       node.store.allow_mmap: false 
-    volumeClaimTemplates:
-    - metadata:
-        name: elasticsearch-data
-      spec:
-        accessModes:
-        - ReadWriteOnce
-        resources:
-          requests:
-            storage: 5Gi
-        storageClassName: standard   
+    # volumeClaimTemplates:
+    # - metadata:
+    #     name: elasticsearch-data
+    #   spec:
+    #     accessModes:
+    #     - ReadWriteOnce
+    #     resources:
+    #       requests:
+    #         storage: 1Gi
+    #     storageClassName: standard   
         
          
