--- a/helm-k8s-test-app/templates/app-deployment.yaml
+++ b/helm-k8s-test-app/templates/app-deployment.yaml
@@ -4,15 +4,18 @@ metadata:
   name: k8stest
   labels:
     app: {{.Values.deployment.labels}}
+    logenabled: {{.Values.deployment.logenabled}}
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: {{.Values.deployment.selector}}
+      logenabled: {{.Values.deployment.logenabled}}
   template:
     metadata:
       labels:
         app: k8stest
+        logenabled: {{.Values.deployment.logenabled}}
     spec:
       containers:
       - name: k8stest
@@ -21,5 +24,9 @@ spec:
         ports:
         - containerPort: 8080
       #restartPolicy: Always
+
+
+
+
 
       
