--- a/helm-k8s-test-app/templates/filebeat.yaml
+++ b/helm-k8s-test-app/templates/filebeat.yaml
@@ -20,8 +20,24 @@ spec:
         - paths: ["/var/log/containers/*${data.kubernetes.container.id}.log"]
           type: container
     processors:
+    - decode_json_fields:
+        fields: ["message"]
+        process_array: false
+        max_depth: 1
+        target: ""
+        overwrite_keys: false
+        add_error_key: true
     - add_cloud_metadata: {}
     - add_host_metadata: {}
+    filebeat.inputs:
+      type: container
+      paths: 
+        - /var/log/containers/*.log
+    fields_under_root: true
+    #json.keys_under_root: true
+    #json.add_error_key: true
+    #json.message_key: message
+        
   daemonSet:
     podTemplate:
       spec:
@@ -39,20 +55,20 @@ spec:
           volumeMounts:
           - name: varlogcontainers
             mountPath: /var/log/containers
-          # - name: varlogpods
-          #   mountPath: /var/log/pods
-          # - name: varlibdockercontainers
-          #   mountPath: /var/lib/docker/containers
+          - name: varlogpods
+            mountPath: /var/log/pods
+          - name: varlibdockercontainers
+            mountPath: /var/lib/docker/containers
         volumes:
         - name: varlogcontainers
           hostPath:
             path: /var/log/containers
-        # - name: varlogpods
-        #   hostPath:
-        #     path: /var/log/pods
-        # - name: varlibdockercontainers
-        #   hostPath:
-        #     path: /var/lib/docker/containers
+        - name: varlogpods
+          hostPath:
+            path: /var/log/pods
+        - name: varlibdockercontainers
+          hostPath:
+            path: /var/lib/docker/containers
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
