--- a/helm-k8s-test-app/templates/configmap.yaml
+++ b/helm-k8s-test-app/templates/configmap.yaml
@@ -1,10 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: env
+  name: env-config
 data:
   # file-like keys
   .env: |
-    RUNTIME=10
+    RUNTIME=20
     MOCKUP=TRUE
+  config: |
+    [default]
+    region=eu-west-1
+    output=json 
  
